--- a/client/package.json
+++ b/client/package.json
@@ -9,9 +9,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "@react-three/drei": "^10.7.4",
+    "@react-three/fiber": "^9.3.0",
+    "react": "^19.1.1",
+    "react-dom": "^19.1.1",
     "socket.io-client": "^4.7.5",
+    "three": "^0.179.1",
     "zustand": "^4.5.2"
   },
   "devDependencies": {
@@ -19,6 +22,6 @@
     "@types/react-dom": "^18.2.7",
     "@vitejs/plugin-react": "^5.0.2",
     "typescript": "^5.5.0",
-    "vite": "^5.2.0"
+    "vite": "^7.1.4"
   }
 }
