--- a/server/package.json
+++ b/server/package.json
@@ -10,11 +10,13 @@
     "cors": "^2.8.5",
     "express": "^4.19.2",
     "helmet": "^8.1.0",
-    "socket.io": "^4.7.5"
+    "socket.io": "^4.7.5",
+    "sqlite3": "^5.1.6"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
     "@types/node": "^20.11.30",
+    "@types/sqlite3": "^3.1.11",
     "nodemon": "^3.0.2",
     "ts-node": "^10.9.2",
     "typescript": "^5.5.0"
