--- a/server/package.json
+++ b/server/package.json
@@ -11,7 +11,8 @@
     "express": "^5.0.3",
     "helmet": "^8.1.0",
     "socket.io": "^4.7.5",
-    "sqlite3": "^5.1.7"
+    "sqlite3": "^5.1.7",
+    "winston": "^3.17.0"
   },
   "devDependencies": {
     "@types/express": "^5.0.3",
