--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -3,13 +3,16 @@
     "target": "ES2020",
     "module": "commonjs",
     "outDir": "./dist",
-    "rootDir": "../",
     "strict": true,
     "esModuleInterop": true,
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true,
-    "resolveJsonModule": true
+    "resolveJsonModule": true,
+    "baseUrl": "../",
+    "paths": {
+      "shared/*": ["shared/src/*"]
+    }
   },
   "include": ["src/**/*", "../shared/src/**/*"],
-  "exclude": ["node_modules", "dist", "../client", "../.git"]
+  "exclude": ["node_modules", "dist"]
 }
