--- a/server/package.json
+++ b/server/package.json
@@ -14,6 +14,7 @@
     "better-sqlite3": "^12.4.1",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
     "express": "^5.0.3",
     "express-rate-limit": "^7.5.1",
     "helmet": "^8.1.0",
