refactor: major code restructuring and 3D improvements
- Refactor Board3D component with significant simplifications
- Add new model components and configuration structure
- Enhance authentication and game state management
- Add GitHub Actions workflow for JSDoc deployment
- Update dependencies and improve type definitions
- Streamline client-server communication

--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
     "@react-three/drei": "^10.7.4",
     "@react-three/fiber": "^9.3.0",
     "bootstrap": "^5.3.8",
+    "dompurify": "^3.2.7",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "socket.io-client": "^4.7.5",
@@ -19,6 +20,7 @@
     "zustand": "^5.0.8"
   },
   "devDependencies": {
+    "@types/dompurify": "^3.0.5",
     "@types/react": "^19.1.12",
     "@types/react-dom": "^19.1.9",
     "@vitejs/plugin-react": "^5.0.2",
