Fix for double add on lobby page. IndexNow submission (Thanks Bing).

--- a/client/.env.example
+++ b/client/.env.example
@@ -2,3 +2,5 @@ VITE_SERVER_URL=http://localhost:3001
 VITE_ADSENSE_CLIENT_ID=ca-pub-XXXXXXXXXXXXXXXX
 VITE_ADSENSE_SLOT_LOBBY=1234567890
 VITE_ADSENSE_SLOT_POSTGAME=9876543210
+VITE_INDEXNOW_KEY=your_indexnow_key
+VITE_SITE_URL=https://yourdomain.com
