--- a/server/.env.example
+++ b/server/.env.example
@@ -1,19 +1,14 @@
 PORT=3001
 HOST=0.0.0.0
 CLIENT_URLS=http://localhost:5173,http://127.0.0.1:5173
+ALLOWED_DOMAIN=yourdomain.com
 NODE_ENV=development
-
-# Production HTTPS (optional)
-# SSL_KEY=/path/to/private-key.pem
-# SSL_CERT=/path/to/certificate.pem
 
 # Discord OAuth
 DISCORD_CLIENT_ID=your_discord_client_id
 DISCORD_CLIENT_SECRET=your_discord_client_secret
 DISCORD_REDIRECT_URI=http://localhost:3001/auth/discord/callback
 
-# JWT Secret
+# Security
 JWT_SECRET=your_secure_random_string
-
-# CSRF Secret
 CSRF_SECRET=your_csrf_secret_key
