feat: add mobile support with Capacitor and deployment badges
- Add Capacitor configuration for mobile app deployment
- Integrate AdMob component for mobile monetization
- Add deployment status badges (Render, Cloudflare, server/client status)
- Create MOBILE_SETUP.md with mobile build instructions
- Update environment examples with mobile-related configs
- Enhance SEO with improved robots.txt and sitemap.xml
- Add badge API endpoints in server
- Update dependencies for mobile and badge support

--- a/client/.env.example
+++ b/client/.env.example
@@ -1,6 +1,11 @@
+# Server connection
 VITE_SERVER_URL=http://localhost:3001
-VITE_ADSENSE_CLIENT_ID=ca-pub-XXXXXXXXXXXXXXXX
+
+# AdSense (Web)
+VITE_ADSENSE_CLIENT_ID=ca-pub-9936804554559347
 VITE_ADSENSE_SLOT_LOBBY=1234567890
 VITE_ADSENSE_SLOT_POSTGAME=9876543210
-VITE_INDEXNOW_KEY=your_indexnow_key
-VITE_SITE_URL=https://yourdomain.com
+
+# AdMob (Android App)
+VITE_ADMOB_BANNER_LOBBY=ca-app-pub-9936804554559347/1234567890
+VITE_ADMOB_BANNER_POSTGAME=ca-app-pub-9936804554559347/9876543210
