--- a/server/.env.example
+++ b/server/.env.example
@@ -12,3 +12,7 @@ DISCORD_REDIRECT_URI=http://localhost:3001/auth/discord/callback
 # Security
 JWT_SECRET=your_secure_random_string
 CSRF_SECRET=your_csrf_secret_key
+
+# Badge URLs
+SERVER_URL=https://opensphinx.onrender.com
+CLIENT_URL=https://opensphinx.pages.dev
