--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@capacitor/android": "^7.4.3",
+    "@capacitor/cli": "^7.4.3",
+    "@capacitor/core": "^7.4.3",
     "@react-three/drei": "^10.7.4",
     "@react-three/fiber": "^9.3.0",
     "bootstrap": "^5.3.8",
@@ -26,5 +29,8 @@
     "@vitejs/plugin-react": "^5.0.2",
     "typescript": "^5.5.0",
     "vite": "^7.1.4"
+  },
+  "optionalDependencies": {
+    "@capacitor-community/admob": "^7.0.3"
   }
 }
