feat: add Android build support and mobile optimizations
- Add GitHub Actions workflow for automated Android release builds
- Add Android signing documentation (ANDROID_SIGNING.md)
- Update mobile setup documentation with Android build instructions
- Configure Capacitor for Android with app icon resources
- Add @capacitor/assets package for icon generation
- Improve mobile UI responsiveness in Board and Header components
- Update .gitignore to exclude Android build artifacts
- Add CORS configuration for mobile app origins
- Enhance board CSS for better mobile display

--- a/.gitignore
+++ b/.gitignore
@@ -145,4 +145,7 @@ server/games.db-wal
 server/games.db-shm
 
 client/android/
+client/icons/
+client/public/manifest.webmanifest
 docs/
+release.keystore
