--- a/client/package.json
+++ b/client/package.json
@@ -23,6 +23,7 @@
     "zustand": "^5.0.8"
   },
   "devDependencies": {
+    "@capacitor/assets": "^3.0.5",
     "@types/dompurify": "^3.0.5",
     "@types/react": "^19.1.12",
     "@types/react-dom": "^19.1.9",
