--- a/client/package.json
+++ b/client/package.json
@@ -20,7 +20,8 @@
     "react-dom": "^19.1.1",
     "socket.io-client": "^4.7.5",
     "three": "^0.179.1",
-    "zustand": "^5.0.8"
+    "zustand": "^5.0.8",
+    "@capacitor-community/admob": "^7.0.3"
   },
   "devDependencies": {
     "@capacitor/assets": "^3.0.5",
@@ -30,8 +31,5 @@
     "@vitejs/plugin-react": "^5.0.2",
     "typescript": "^5.5.0",
     "vite": "^7.1.4"
-  },
-  "optionalDependencies": {
-    "@capacitor-community/admob": "^7.0.3"
   }
 }
