--- a/.github/workflows/android-release.yml
+++ b/.github/workflows/android-release.yml
@@ -42,10 +42,18 @@ jobs:
       - name: Add Android platform
         working-directory: client
         run: npx cap add android
+        env:
+          VITE_SERVER_URL: ${{ vars.PRODUCTION_SERVER_URL }}
+          VITE_ADMOB_BANNER_LOBBY: ${{ vars.VITE_ADMOB_BANNER_LOBBY }}
+          VITE_ADMOB_BANNER_POSTGAME: ${{ vars.VITE_ADMOB_BANNER_POSTGAME }}
+          VITE_ADMOB_INTERSTITIAL: ${{ vars.VITE_ADMOB_INTERSTITIAL }}
+          ADMOB_APP_ID: ${{ vars.ADMOB_APP_ID }}
         
       - name: Generate icons
         working-directory: client
         run: npx capacitor-assets generate --android
+        env:
+          ADMOB_APP_ID: ${{ vars.ADMOB_APP_ID }}
         
       - name: Sync Capacitor
         working-directory: client
