--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -10,9 +10,17 @@
     "resolveJsonModule": true,
     "baseUrl": "../",
     "paths": {
-      "shared/*": ["shared/src/*"]
+      "shared/*": [
+        "shared/src/*"
+      ]
     }
   },
-  "include": ["src/**/*", "../shared/src/**/*"],
-  "exclude": ["node_modules", "dist"]
+  "include": [
+    "src/**/*",
+    "../shared/src/**/*"
+  ],
+  "exclude": [
+    "node_modules",
+    "dist"
+  ]
 }
