--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@capacitor-community/admob": "^7.0.3",
     "@capacitor/android": "^7.4.3",
     "@capacitor/cli": "^7.4.3",
     "@capacitor/core": "^7.4.3",
@@ -17,12 +18,14 @@
     "@react-three/fiber": "^9.3.0",
     "bootstrap": "^5.3.8",
     "dompurify": "^3.2.7",
+    "i18next": "^25.6.0",
+    "i18next-browser-languagedetector": "^8.2.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-i18next": "^16.2.0",
     "socket.io-client": "^4.7.5",
     "three": "^0.179.1",
-    "zustand": "^5.0.8",
-    "@capacitor-community/admob": "^7.0.3"
+    "zustand": "^5.0.8"
   },
   "devDependencies": {
     "@capacitor/assets": "^3.0.5",
