--- a/client/package.json
+++ b/client/package.json
@@ -23,6 +23,7 @@
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-i18next": "^16.2.0",
+    "react-router-dom": "^7.9.6",
     "socket.io-client": "^4.7.5",
     "three": "^0.179.1",
     "zustand": "^5.0.8"
@@ -32,6 +33,7 @@
     "@types/dompurify": "^3.0.5",
     "@types/react": "^19.1.12",
     "@types/react-dom": "^19.1.9",
+    "@types/react-router-dom": "^5.3.3",
     "@vitejs/plugin-react": "^5.0.2",
     "typescript": "^5.5.0",
     "vite": "^7.1.11"
